# Dji_EP_ws

./: .gitignore  AUTONOMOUS_FLIGHT_GUIDE.md  QWEN.md  README_SIMULATION.md  TODO.md  check_simulation.py  setup_env.bash  start_simulation.bash  test_environment.bash  test_launch.bash  verify_launch_config.bash  workspace_config.env
src/dji_psdk_ros_driver/: CMakeLists.txt  package.xml
src/dji_psdk_ros_driver/launch/: startup_ctl.launch
src/dji_psdk_ros_driver/scripts/: apriltag_m3e.py
src/dji_psdk_ros_driver/src/: uav_odom.cpp
src/dji_psdk_ros_driver/src/Controller/: fcProxy.cpp  publish.cpp
src/dji_psdk_ros_driver/src/Controller/proxy_src/: BufferItem.cpp  DataPort.cpp  UdpPort.cpp  UdpPort.h
src/dji_psdk_ros_driver/srv/: takeoffOrLanding.srv  yolov5Result.srv
src/driver_pkg/: CMakeLists.txt  package.xml
src/driver_pkg/launch/: connect_test.launch  run_driver.launch
src/driver_pkg/scripts/: ros_driver.py  sta_connect.py  test.py
src/driver_pkg/scripts/robomaster/: robot.py
src/drone-control-start/: CMakeLists.txt  package.xml
src/drone_start/: CMakeLists.txt  package.xml
src/drone_start/config/: waypoints.yaml
src/drone_start/scripts/: autonomous_flight_setup.py  autonomous_takeoff_demo.py  drone_services.py  flight_manager.py  mission_orchestrator.py  qrcode_landoff_test.py  setup_autonomous_flight.bash  test_goto_velocity.py  unified_flight_controller.py
src/ep_start/: CMakeLists.txt  package.xml
src/ep_start/action/: Mission.action
src/ep_start/launch/: mission_controller.launch  mission_system.launch  mission_tui.launch
src/ep_start/scripts/: action.py  mission_tui.py  mission_tui.tcss  start.py
src/robot_contral/: CMakeLists.txt  package.xml
src/robot_contral/scripts/: key_contral.py
src/sim_pkg/: CMakeLists.txt  package.xml
src/sim_pkg/config/: gimbal_controllers.yaml
src/sim_pkg/config/mavros_config/: px4_pluginlists_indoor.yaml
src/sim_pkg/launch/: all_simulate_gazebo.launch  gimbal_initialize.launch  ground_truth_bridge.launch  sitl_px4_indoor.launch  smartcar_gazebo.launch  smartcar_urdf.launch  world.launch
src/sim_pkg/rviz/: sim.rviz  smartcar.rviz
src/sim_pkg/scripts/: direct_gimbal_controller.py  distance_controller.py  setup_gimbal_controllers.py  sim_reset.py  test_gimbal_camera_system.py
src/sim_pkg/urdf/: gimbal_camera_attachment.urdf  smartcar.urdf
src/sim_pkg/worlds/: map.world  map_2.world
src/sim_pkg/worlds/materials_user/img_project/: apple.xcf  banana.xcf  orange.xcf  qr.xcf  sign_1.xcf  sign_2.xcf  sign_charge.xcf  sign_home.xcf  well.xcf
src/sim_pkg/worlds/materials_user/scripts/: world.material
src/tta_m3e_rtsp/: CMakeLists.txt  package.xml
src/tta_m3e_rtsp/launch/: position.yaml
src/tta_m3e_rtsp/msg/: flightByVel.msg
src/tta_m3e_rtsp/src/: uav_odom.cpp
src/tta_m3e_rtsp/src/Controller/: fcProxy.cpp
src/tta_m3e_rtsp/src/Controller/proxy_src/: Buffer.cpp  Buffer.h  DataPortKeeperThread.cpp  DataPortReadThread.cpp  DataPortSendThread.cpp  Port.cpp  TcpDataPort.cpp
src/tta_m3e_rtsp/src/Controller/utils/: FileUtils.cpp
src/vision_pkg/: CMakeLists.txt  package.xml
src/vision_pkg/launch/: qrcode_detection.launch  rtsp_ffmpeg.launch  rtsp_streamer.launch  yolo_detection.launch
src/vision_pkg/model/: user_voc.yaml
src/vision_pkg/model/exp1/: opt.yaml
src/vision_pkg/msg/: Detection.msg  QRCodeResult.msg  YOLOResult.msg
src/vision_pkg/scripts/: qrcode_detector.py  rtsp_performance_tester.py  rtsp_video_stream.py  test_rtsp_connection.py  yolo_onnx_detector.py
src/vision_pkg/src/: cpp_rtsp_video_stream.cpp  rtsp_ffmpeg_node.cpp
src/vision_pkg/srv/: DetectQRCode.srv  DetectYOLO.srv
