<?xml version="1.0"?>
<package format="2">
  <name>dji_psdk_ros_driver</name>
  <version>1.0.0</version>
  <description>The dji_psdk_ros_driver package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="tta@todo.todo">tta</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="website">https://www.ttaviation.com/doc</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="3287486878@qq.com">YOYO</author>
  <maintainer email="3287486878@qq.com">小趴菜</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
